--- a/code.ipynb
+++ b/code.ipynb
@@ -53,6 +53,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Setting up the canvas in use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene = canvas(width=1000, height=800, background=color.gray(0.5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Code to create a ball that changes color every 5 seconds"
    ]
   },
@@ -104,6 +120,28 @@
    "outputs": [],
    "source": [
     "tube = cylinder(radius=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating white room with a red marble in the center, using the `pos` parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floor       = box(pos=vector(0,-10,0), color=color.white, length=20, width=20, height=.3)\n",
+    "ceiling     = box(pos=vector(0,10,0), color=color.white, length=20, width=20, height=.3)\n",
+    "right_wall  = box(pos=vector(10,0,0), color=color.white, length=.2, width=20, height=20)\n",
+    "left_wall   = box(pos=vector(-10,0,0), color=color.white, length=.2, width=20, height=20)\n",
+    "back_wall   = box(pos=vector(0,0,-10), color=color.white, length=20, width=.3, height=20)\n",
+    "\n",
+    "marble      = sphere(color=color.red, radius=3)"
    ]
   }
  ],
