Making the marble oscillate horizontally in the room

--- a/code.ipynb
+++ b/code.ipynb
@@ -143,6 +143,33 @@
     "\n",
     "marble      = sphere(color=color.red, radius=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding animation onto the marble to make it oscillate left to right in the room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changeX = 0.1\n",
+    "xPos = 0\n",
+    "\n",
+    "while True:\n",
+    "    rate(20) # To change the speed of animation\n",
+    "    \n",
+    "    xPos = xPos + changeX\n",
+    "\n",
+    "    if xPos > 10 or xPos < -10:\n",
+    "        changeX *= -1\n",
+    "\n",
+    "    marble.pos = vector(xPos,0,0)\n"
+   ]
   }
  ],
  "metadata": {
