Parameterizing the dimensions using size attribute, background changes

--- a/code.ipynb
+++ b/code.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = canvas(width=1000, height=800, background=color.gray(0.5))"
+    "scene = canvas(width=1000, height=800, background=color.gray(0.3))"
    ]
   },
   {
@@ -169,6 +169,26 @@
     "        changeX *= -1\n",
     "\n",
     "    marble.pos = vector(xPos,0,0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameterizing the dimensions using `size` attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floor       = box(pos=vector(0,-10,0), color=color.white, size=vector(20,.3,20))\n",
+    "ceiling     = box(pos=vector(0,10,0),  color=color.white, size=vector(20,.3,20))\n",
+    "right_wall  = box(pos=vector(10,0,0),  color=color.white, size=vector(.2,20,20))\n",
+    "left_wall   = box(pos=vector(-10,0,0), color=color.white, size=vector(.2,20,20))\n",
+    "back_wall   = box(pos=vector(0,0,-10), color=color.white, size=vector(20,20,.3))"
    ]
   }
  ],
