Parameterizing values, second attempt

--- a/code.ipynb
+++ b/code.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parameterizing the dimensions using `size` attribute"
+    "Parameterizing the dimensions and using `size` attribute"
    ]
   },
   {
@@ -184,11 +184,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "floor       = box(pos=vector(0,-10,0), color=color.white, size=vector(20,.3,20))\n",
-    "ceiling     = box(pos=vector(0,10,0),  color=color.white, size=vector(20,.3,20))\n",
-    "right_wall  = box(pos=vector(10,0,0),  color=color.white, size=vector(.2,20,20))\n",
-    "left_wall   = box(pos=vector(-10,0,0), color=color.white, size=vector(.2,20,20))\n",
-    "back_wall   = box(pos=vector(0,0,-10), color=color.white, size=vector(20,20,.3))"
+    "mRadius = 1\n",
+    "wallThickness = .3\n",
+    "roomWidth, roomDepth, roomHeight = 20,20,20\n",
+    "\n",
+    "floor       = box(pos=vector(0,-roomHeight/2,0), color=color.white, size=vector(roomWidth,wallThickness,roomDepth))\n",
+    "ceiling     = box(pos=vector(0,roomHeight/2,0),  color=color.white, size=vector(roomWidth,wallThickness,roomDepth))\n",
+    "right_wall  = box(pos=vector(roomWidth/2,0,0),  color=color.white, size=vector(wallThickness,roomHeight,roomDepth))\n",
+    "left_wall   = box(pos=vector(-roomWidth/2,0,0), color=color.white, size=vector(wallThickness,roomHeight,roomDepth))\n",
+    "back_wall   = box(pos=vector(0,0,-roomDepth/2), color=color.white, size=vector(roomWidth,roomHeight,wallThickness))\n",
+    "\n",
+    "marble      = sphere(color=color.red, radius=mRadius)"
    ]
   }
  ],
