Changing bounds of balls oscillation

--- a/code.ipynb
+++ b/code.ipynb
@@ -196,6 +196,23 @@
     "\n",
     "marble      = sphere(color=color.red, radius=mRadius)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adjusting marble animation to be bound within the room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if xPos+mRadius+wallThickness > 10 or xPos-mRadius-wallThickness < -10:\n",
+    "        changeX *= -1"
+   ]
   }
  ],
  "metadata": {
