Using variables to track ball edges in boundart=y

--- a/code.ipynb
+++ b/code.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adjusting marble animation to be bound within the room"
+    "Adjusting marble animation to be bound within the room, by creating variables to track edge of the ball and wall edges"
    ]
   },
   {
@@ -210,8 +210,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if xPos+mRadius+wallThickness > 10 or xPos-mRadius-wallThickness < -10:\n",
-    "        changeX *= -1"
+    "xRMEdge = xPos + mRadius\n",
+    "RWEdge = roomWidth/2 - wallThickness/2\n",
+    "\n",
+    "xLMEdge = xPos - mRadius\n",
+    "LWEdge = -roomWidth/2 + wallThickness/2\n",
+    "\n",
+    "if xRMEdge > RWEdge or xLMEdge < LWEdge:\n",
+    "    changeX *= -1"
    ]
   }
  ],
