Bouncing the ball around the room

--- a/code.ipynb
+++ b/code.ipynb
@@ -219,6 +219,64 @@
     "if xRMEdge > RWEdge or xLMEdge < LWEdge:\n",
     "    changeX *= -1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding animation for the ball to bound around throughout the whole room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "xPos, yPos, zPos = 0, 0, 0\n",
+    "changeX, changeY, changeZ = .1, .1, .1\n",
+    "\n",
+    "while True:\n",
+    "    rate(30) # To change the speed of animation\n",
+    "   \n",
+    "    xPos += changeX\n",
+    "    yPos += changeY\n",
+    "    zPos += changeZ\n",
+    "\n",
+    "    xRMEdge = xPos + mRadius\n",
+    "    xLMEdge = xPos - mRadius\n",
+    "    yTMEdge = yPos + mRadius\n",
+    "    yBMEdge = yPos - mRadius\n",
+    "    zBMEdge = zPos + mRadius\n",
+    "    zFMEdge = zPos - mRadius\n",
+    "\n",
+    "    RWEdge = roomWidth / 2 - wallThickness / 2\n",
+    "    LWEdge = -roomWidth / 2 + wallThickness / 2\n",
+    "    CEdge = roomHeight / 2 - wallThickness / 2\n",
+    "    FlEdge = -roomHeight / 2 + wallThickness / 2\n",
+    "    BEdge = roomDepth / 2 + wallThickness / 2\n",
+    "    FrEdge = - roomDepth / 2 + wallThickness / 2\n",
+    "\n",
+    "    if xRMEdge > RWEdge or xLMEdge < LWEdge:\n",
+    "            changeX *= -1\n",
+    "\n",
+    "    if yTMEdge > CEdge or yBMEdge < FlEdge:\n",
+    "            changeY *= -1\n",
+    "\n",
+    "    if zBMEdge > BEdge or zFMEdge < FrEdge:\n",
+    "            changeZ *= -1 \n",
+    "\n",
+    "    marble.pos = vector(xPos,yPos,zPos)"
+   ]
   }
  ],
  "metadata": {
