Using numpy to smoothen and change various attributes of an object

--- a/code.ipynb
+++ b/code.ipynb
@@ -18,7 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vpython import *\n",
+    "from time import *\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting up the canvas in use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,23 +63,6 @@
     }
    ],
    "source": [
-    "from vpython import *\n",
-    "from time import *\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Setting up the canvas in use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "scene = canvas(width=1000, height=800, background=color.gray(0.3))"
    ]
   },
@@ -74,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "ball = sphere()\n",
     "sleep(5)\n",
@@ -276,6 +289,88 @@
     "            changeZ *= -1 \n",
     "\n",
     "    marble.pos = vector(xPos,yPos,zPos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animating 3D objects by  changing size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using vpython, we might want to use create a piston witht the code shown below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "piston = cylinder(radius=1, length=3, color=color.red, opacity=0.25)\n",
+    "\n",
+    "while True:\n",
+    "    for L in range(1,6):\n",
+    "        rate(5)\n",
+    "        piston.length = L\n",
+    "    for L in range(6,1,-1):\n",
+    "        rate(5)\n",
+    "        piston.length = L"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, the code above is quite choppy, thus to solve this we can use the numpy library's range function `.linspace()`, this will cause the animation to be smoother by increating the number of steps to 1000 and increasing the `rate()` to accomodate for this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NUMBER OF STEPS CANNOT BE NEGATIVE**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    for L in np.linspace(1,6,1000):\n",
+    "        rate(50)\n",
+    "        piston.length = L\n",
+    "    for L in np.linspace(6,1,1000):\n",
+    "        rate(50)\n",
+    "        piston.length = L"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this same concept on other attributes of an object, example the radius of a sphere, the opacity of an object etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    for o in np.linspace(0,1,100):\n",
+    "        rate(50)\n",
+    "        piston.opacity = o\n",
+    "    for o in np.linspace(1,0,100):\n",
+    "        rate(50)\n",
+    "        piston.opacity = o"
    ]
   }
  ],
