Base code changes

--- a/code.ipynb
+++ b/code.ipynb
@@ -372,6 +372,41 @@
     "        rate(50)\n",
     "        piston.opacity = o"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Animating a thermometer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a thermometer\n",
+    "bulb = sphere(radius=1.25, color=color.white, opacity=.4)\n",
+    "tube = cylinder(radius=0.6, length=5, color=color.white, opacity=.4)\n",
+    "mercuryInBulb = sphere(radius=1, color=color.red, opacity=1)\n",
+    "mercuryCol = cylinder(radius=0.5, length=4.5, color=color.red, opacity=1)\n",
+    "\n",
+    "while True:\n",
+    "        for temp in np.linspace(1,5,100):\n",
+    "                rate(20)\n",
+    "                mercuryCol.length = temp\n",
+    "        for temp in np.linspace(5,1,100):\n",
+    "                rate(20)\n",
+    "                mercuryCol.length = temp"
+   ]
   }
  ],
  "metadata": {
